Add store-load hazard detection and forwarding mechanisms in RISC-V CPU
- Implemented `store_load_detector` module to identify store-load hazards and forward data when necessary.
- Created `store_load_forward` module to handle forwarding of data from store instructions to load instructions.
- Enhanced the `riscv_cpu` module to integrate store-load hazard detection and forwarding logic.
- Added a `writeback` module to select the correct data to write back to the register file based on instruction type.
- Developed comprehensive system tests for RAW, control, and memory hazards in the RISC-V CPU.
- Updated unit tests for the decoder to ensure compatibility with new instruction definitions.
- Configured GTKWave for waveform visualization during simulation.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
     "verilog.linting.verilator.includePath": [
         "rtl",
         "rtl/pipeline_stages",
+        "rtl/core_modules"
     ],
     "verilog.linting.linter": "verilator",
     "verilog.languageServer.rustHdl.path": ""
