--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,8 +4,10 @@
     "dockerfile": "Dockerfile"
   },
   "runArgs": [
+    // This is the key change for Linux
+    "--network=host",
     "-e",
-    "DISPLAY=host.docker.internal:0",
+    "DISPLAY=${localEnv:DISPLAY}",
     "-e",
     "XAUTHORITY=/tmp/.Xauthority",
     "-v",
