Refactor RISC-V CPU Memory Management and Update Memory Map
- Enhanced data memory module to support byte-addressable memory with improved read/write logic.
- Introduced a new memory map header file to define memory regions for instruction, data, and peripherals.
- Updated memory unit to handle byte enables and load types for various data sizes.
- Modified the RISC-V CPU module to integrate new memory management features, including byte enable and load type signals.
- Adjusted top-level module to accommodate changes in data memory instantiation and address decoding.
- Updated simulation files and test cases to reflect new memory addresses and structures.
- Refined the Fibonacci example and interrupt tests to align with the new memory map.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,7 +9,8 @@
     "verilog.linting.verilator.includePath": [
         "rtl",
         "rtl/pipeline_stages",
-        "rtl/core_modules"
+        "rtl/core_modules",
+        "rtl/include"
     ],
     "verilog.linting.linter": "verilator",
     "verilog.languageServer.rustHdl.path": ""
