--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,7 @@ name: DevContainer CI
 
 on:
   push:
-    branches: [main]
+    branches: ["main"]
   pull_request:
 
 jobs:
@@ -25,5 +25,8 @@ jobs:
         uses: devcontainers/ci@v0.3
         with:
           runCmd: |
+            python3 -m venv tests/.venv
+            source tests/.venv/bin/activate
+            pip install --upgrade pip
             pip install -r tests/requirements.txt
             pytest -v tests/
